[package]
name = "rs-bkstring"
version = "0.1.0"
authors = ["Brian Mackintosh <bcmackintosh@gmail.com>",
           "Mark E. Haase <mehaase@gmail.com>"]

[lib]
name = "bktree"
crate-type = ["cdylib"]

[dependencies]
cpython = { git = "https://github.com/dgrunwald/rust-cpython.git" }
pyo3 = { git = "https://github.com/PyO3/PyO3.git" }
libc = "0.2.24"
rand = "*"
